--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="mainBackground">#e2e2e2</color>
     <color name="lightgray">#D3D3D3</color>
     <color name="silver">#e6e6e6</color>
+
+    <color name="test_result_right_answer">#1100FF00</color>
+    <color name="test_result_wrong_answer">#11FF0000</color>
+
 </resources>
