--- a/app/src/main/res/layout/tests_list_offline_card_item.xml
+++ b/app/src/main/res/layout/tests_list_offline_card_item.xml
@@ -42,7 +42,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/testitem_lasttime"
-                        android:textStyle="italic" />
+                        android:textStyle="italic"
+                        android:singleLine="true" />
 
                 </LinearLayout>
 
