--- a/app/src/main/res/layout/fragment_listview.xml
+++ b/app/src/main/res/layout/fragment_listview.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ListView
-        android:id="@+id/list_of_categories"
+        android:id="@+id/list_of_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
