added freagment transition (image - > list view header) FIX: works

--- a/app/src/main/res/layout/questions_category_item.xml
+++ b/app/src/main/res/layout/questions_category_item.xml
@@ -7,7 +7,7 @@
     android:focusableInTouchMode="false"
     android:clickable="false"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
     android:background="@color/colorWhite"
