added fragment with interview question

--- a/app/src/main/res/layout/fragment_listview.xml
+++ b/app/src/main/res/layout/fragment_listview.xml
@@ -9,5 +9,6 @@
         android:clipToPadding="false"
         android:divider="@null"
         android:scrollbarStyle="outsideOverlay"
-        android:drawSelectorOnTop="true" />
+        android:drawSelectorOnTop="true"
+        android:layout_marginBottom="50dp" />
 </LinearLayout>
