--- a/app/src/main/res/layout/fragment_interview_question.xml
+++ b/app/src/main/res/layout/fragment_interview_question.xml
@@ -3,16 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
+    android:paddingBottom="50dp"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/question_main_view"
-        android:padding="10dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp">
-
+        android:orientation="vertical"
+        android:padding="10dp">
     </LinearLayout>
 
 
