--- a/app/src/main/res/animator/slide_in_from_left_to_right.xml
+++ b/app/src/main/res/animator/slide_in_from_left_to_right.xml
@@ -3,10 +3,18 @@
     android:duration="@android:integer/config_mediumAnimTime" >
 
     <objectAnimator
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:propertyName="alpha"
+        android:valueType="floatType"
+        android:valueTo="1.0"
+        android:valueFrom="0.0"
+        android:duration="400"/>
+
+    <objectAnimator
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="500"
+        android:duration="800"
         android:propertyName="x"
-        android:valueFrom="-1000"
+        android:valueFrom="-1280"
         android:valueTo="0"
         android:valueType="floatType" />
 
