--- a/app/src/main/res/animator/slide_out_from_right_to_left.xml
+++ b/app/src/main/res/animator/slide_out_from_right_to_left.xml
@@ -3,11 +3,19 @@
     android:duration="@android:integer/config_mediumAnimTime" >
 
     <objectAnimator
+        android:interpolator="@android:anim/accelerate_interpolator"
+        android:propertyName="alpha"
+        android:valueType="floatType"
+        android:valueTo="0.0"
+        android:valueFrom="1.0"
+        android:duration="400"/>
+
+    <objectAnimator
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:duration="500"
+        android:duration="800"
         android:propertyName="x"
         android:valueFrom="0"
-        android:valueTo="-1000"
+        android:valueTo="-1280"
         android:valueType="floatType" />
 
 </set>
