--- a/app/src/main/res/layout/dialog_test_open.xml
+++ b/app/src/main/res/layout/dialog_test_open.xml
@@ -18,17 +18,8 @@
         android:layout_below="@+id/dialog_title"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:id="@+id/view" />
-
-    <ImageButton
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:id="@+id/dialog_show_progress"
-        android:src="@drawable/ic_assessment_black_24dp"
-        android:background="@android:color/transparent"
-        android:layout_above="@+id/view"
-        android:scaleType="centerCrop"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -84,16 +75,18 @@
         android:layout_below="@+id/textView5"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
 
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/cancel"
-            android:id="@+id/dialog_cancel"
+            android:text="@string/dialog_test_open_graphic"
+            android:id="@+id/dialog_show_progress"
             android:layout_weight="1"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:textColor="@color/colorPrimaryDark"/>
 
         <Button
             style="?android:attr/buttonBarButtonStyle"
@@ -102,7 +95,8 @@
             android:layout_height="wrap_content"
             android:text="@string/start_test"
             android:id="@+id/dialog_start_test_button"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textColor="@color/colorPrimaryDark"/>
 
     </LinearLayout>
 
