--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#43A047</color>
-    <color name="colorPrimaryDark">#1B5E20</color>
-    <color name="colorAccent">#43A047</color>
+    <color name="colorPrimary">#039BE5</color>
+    <color name="colorPrimaryDark">#01579B</color>
+    <color name="colorAccent">#039BE5</color>
     <color name="colorWhite">#ffffff</color>
     <color name="mainBackground">#e2e2e2</color>
     <color name="lightgray">#D3D3D3</color>
