--- a/app/src/main/res/layout/tests_list_offline_card_item.xml
+++ b/app/src/main/res/layout/tests_list_offline_card_item.xml
@@ -6,7 +6,6 @@
     android:padding="2dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/testitem_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="2dp"
@@ -14,7 +13,10 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:id="@+id/testitem_cardview"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackground"
+            android:clickable="true">
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
