--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -4,4 +4,7 @@
     android:id="@+id/list_of_items"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="50dp"/>
+    android:paddingBottom="50dp"
+    android:clipToPadding="false"
+    android:scrollbarStyle="outsideOverlay"
+    android:background="@color/colorWhite"/>
