--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -22,9 +22,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorWhite"
+        android:orientation="vertical"
         android:layout_below="@+id/view3">
 
         <LinearLayout
@@ -95,5 +98,5 @@
                     android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </FrameLayout>
 </RelativeLayout>
