--- a/app/src/main/res/layout/question_item.xml
+++ b/app/src/main/res/layout/question_item.xml
@@ -36,15 +36,20 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/linearLayout2"
+            android:layout_toEndOf="@+id/linearLayout2"
             android:orientation="vertical"
-            android:paddingRight="10dp">
+            android:paddingRight="10dp"
+            android:paddingEnd="10dp"
+            android:paddingLeft="10dp"
+            android:paddingStart="10dp">
 
             <TextView
                 android:id="@+id/question_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="1212" />
 
         </RelativeLayout>
 
@@ -54,7 +59,8 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginRight="10dp"
-        android:layout_toRightOf="@+id/linearLayout2"
+        android:layout_marginEnd="10dp"
         android:background="@color/lightgray" />
 </LinearLayout>
