--- a/app/src/main/res/layout/questions_category_item.xml
+++ b/app/src/main/res/layout/questions_category_item.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv"
-    android:focusable="false"
-    android:focusableInTouchMode="false"
-    android:clickable="false"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:descendantFocusability="blocksDescendants"
-    android:orientation="vertical"
     android:background="@color/colorWhite"
+    android:clickable="false"
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
     app:cardCornerRadius="0dp">
 
     <LinearLayout
@@ -31,8 +32,8 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_gravity="start"
-                android:layout_marginRight="4dp"
                 android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
                 android:contentDescription="@string/CD_category_img" />
 
             <RelativeLayout
@@ -58,8 +59,8 @@
                         android:layout_marginBottom="2dp"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        tools:text="ООП"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        tools:text="ООП" />
 
                     <TextView
                         android:id="@+id/category_description"
@@ -68,8 +69,8 @@
                         android:layout_gravity="fill"
                         android:baselineAligned="false"
                         android:maxLines="4"
-                        tools:text="Long text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно  text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны основные алгоритмические методы: жадные алгоритмы, «разделяй и властвуй», динамическое программирование. Помимо теоретических основ, будут рассмотрены тонкости реализации рассмотренных алгоритмов на языках C++ и Python. Слушателям будет предложено реализовать большинство разобранных в курсе алгоритмов. Решения будут проверяться тестирующей системой на тщательно подобранных тестах."
-                        android:textSize="11sp" />
+                        android:textSize="11sp"
+                        tools:text="Long text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсong text В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В кtext В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны осно  text В курсе будут разобраны осно text В курсе будут разобраны осно text В курсе будут разобраны основные алгоритмические методы: жадные алгоритмы, «разделяй и властвуй», динамическое программирование. Помимо теоретических основ, будут рассмотрены тонкости реализации рассмотренных алгоритмов на языках C++ и Python. Слушателям будет предложено реализовать большинство разобранных в курсе алгоритмов. Решения будут проверяться тестирующей системой на тщательно подобранных тестах." />
                 </LinearLayout>
 
             </RelativeLayout>
