--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,64 +1,70 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
 
     <LinearLayout
         android:id="@+id/login_view"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:focusableInTouchMode="true"
-        android:descendantFocusability="beforeDescendants">
+        android:paddingTop="56dp">
 
         <ImageView
-            android:contentDescription="@string/logo"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginBottom="24dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo"/>
+            android:layout_marginBottom="24dp"
+            android:contentDescription="@string/logo"
+            android:src="@drawable/logo" />
 
-        <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/login_email_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:id="@+id/login_email_wrapper">
-            <EditText android:id="@+id/edittext_login"
+            android:layout_marginTop="8dp"
+            app:errorTextAppearance="@style/error_appearance">
+
+            <EditText
+                android:id="@+id/edittext_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:hint="@string/email" />
+                android:hint="@string/email"
+                android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/login_password_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:id="@+id/login_password_wrapper">
-            <EditText android:id="@+id/edittext_password"
+            android:layout_marginTop="8dp"
+            app:errorTextAppearance="@style/error_appearance"
+            app:passwordToggleEnabled="true">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/edittext_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:hint="@string/password"
                 android:imeOptions="actionSend"
-                android:hint="@string/password"/>
+                android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
         <TextView
+            android:id="@+id/link_forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/forget_password"
-            android:id="@+id/link_forgot_password"
             android:layout_gravity="center"
             android:gravity="center"
             android:padding="12dp"
+            android:text="@string/forget_password"
             android:textColor="@color/colorAccent"
             android:textSize="12sp" />
 
@@ -66,14 +72,14 @@
             android:id="@+id/button_login"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorPrimaryDark"
             android:padding="12dp"
             android:text="@string/enter"
-            android:textColor="@color/colorWhite"
-            android:background="@color/colorPrimaryDark"/>
+            android:textColor="@color/colorWhite" />
 
-       <include layout="@layout/sign_in_title" />
+        <include layout="@layout/sign_in_title" />
 
     </LinearLayout>
 </ScrollView>
