--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,71 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
+        android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:focusableInTouchMode="true"
-        android:descendantFocusability="beforeDescendants">
+        android:paddingTop="56dp">
 
         <ImageView
-            android:contentDescription="@string/logo"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginBottom="24dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="24dp"
+            android:contentDescription="@string/logo"
             android:src="@drawable/logo" />
 
-        <!--  Name Label -->
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_name_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:id="@+id/input_name_wrapper">
-            <EditText android:id="@+id/input_name"
+            android:layout_marginTop="8dp"
+            app:errorTextAppearance="@style/error_appearance">
+
+            <EditText
+                android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName|textAutoCorrect|textCapWords"
+                android:hint="@string/name"
                 android:imeOptions="actionNext"
-                android:hint="@string/name" />
+                android:inputType="textPersonName|textAutoCorrect|textCapWords" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_email_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:id="@+id/input_email_wrapper">
-            <EditText android:id="@+id/input_email"
+            android:layout_marginTop="8dp"
+            app:errorTextAppearance="@style/error_appearance">
+
+            <EditText
+                android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
+                android:hint="@string/email"
                 android:imeOptions="actionNext"
-                android:hint="@string/email" />
+                android:inputType="textEmailAddress" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_password_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:id="@+id/input_password_wrapper">
-            <EditText android:id="@+id/input_password"
+            android:layout_marginTop="8dp"
+            app:passwordToggleEnabled="true"
+            app:errorTextAppearance="@style/error_appearance">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:hint="@string/password"
                 android:imeOptions="actionSend"
-                android:hint="@string/password"/>
+                android:inputType="textPassword" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Signup Button -->
@@ -73,12 +80,12 @@
             android:id="@+id/btn_signup"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorPrimaryDark"
             android:padding="12dp"
             android:text="@string/registration"
-            android:textColor="@color/colorWhite"
-            android:background="@color/colorPrimaryDark"/>
+            android:textColor="@color/colorWhite" />
 
     </LinearLayout>
 </ScrollView>
