--- a/app/src/main/res/layout/dialog_reminder_password.xml
+++ b/app/src/main/res/layout/dialog_reminder_password.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view_dialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
     android:padding="8dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/email_reg_wrapper"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:errorTextAppearance="@style/error_appearance">
 
         <AutoCompleteTextView
             android:id="@+id/email_reg"
@@ -20,7 +22,7 @@
             android:hint="@string/email"
             android:imeOptions="actionSend"
             android:inputType="textEmailAddress"
-            android:singleLine="true"/>
+            android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
 
