trying fixind infinitive registration on sign up screen

--- a/app/src/main/res/layout/activity_non_google_api.xml
+++ b/app/src/main/res/layout/activity_non_google_api.xml
@@ -31,24 +31,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:layout_below="@+id/toolbar_main">
-
-        <FrameLayout
-            android:id="@+id/fragment_container_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/mainBackground">
-
-        </FrameLayout>
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            ads:adSize="BANNER"
-            ads:adUnitId="@string/banner_ad_unit_id" />
-
+        android:layout_below="@+id/toolbar_main"
+        android:background="@color/mainBackground"
+        android:id="@+id/fragment_container_main">
     </FrameLayout>
 
 
