--- a/app/src/main/res/drawable/question_item_circle_selector.xml
+++ b/app/src/main/res/drawable/question_item_circle_selector.xml
@@ -2,6 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_activated="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+            <size android:height="40dp" android:width="40dp"/>
             <corners android:radius="15dip" />
             <stroke android:width="5dip" android:color="@color/colorPrimaryDark" />
             <solid android:color="@color/colorPrimaryDark" />
@@ -10,6 +11,7 @@
 
     <item android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+            <size android:height="40dp" android:width="40dp"/>
             <corners android:radius="15dip" />
             <gradient android:angle="45" android:endColor="@color/colorPrimaryDark" android:startColor="@color/colorPrimary" />
         </shape>
@@ -17,6 +19,7 @@
 
     <item android:state_pressed="false">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+            <size android:height="40dp" android:width="40dp"/>
             <corners android:radius="15dip" />
             <stroke android:width="5dip" android:color="@color/colorPrimary" />
             <solid android:color="@color/colorPrimary" />
