Added QuestionCreator logics Some fixes

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -30,10 +30,11 @@
             android:checked="false"
             android:icon="@drawable/ic_star_white_24dp"
             android:title="@string/navigation_menu_like" />
-        <!--<item
+        <item
             android:id="@+id/navigation_creator_item"
             android:checked="false"
-            android:title="@string/navigation_menu_help_me" />-->
+            android:icon="@drawable/ic_supervisor_account_white_24dp"
+            android:title="@string/navigation_menu_help_me" />
         <item
             android:id="@+id/navigation_log_out"
             android:checked="false"
