--- a/app/src/main/res/layout/activity_test_creator.xml
+++ b/app/src/main/res/layout/activity_test_creator.xml
@@ -75,7 +75,8 @@
         <FrameLayout
             android:id="@+id/fragment_container_creator"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:padding="8dp" />
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
