--- a/app/src/main/res/layout-v21/fragment_question_preview.xml
+++ b/app/src/main/res/layout-v21/fragment_question_preview.xml
@@ -93,7 +93,6 @@
             android:id="@+id/button_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:background="?attr/selectableItemBackground"
@@ -108,11 +107,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:background="?attr/selectableItemBackground"
+            android:background="@drawable/ripple_drawable"
+            android:elevation="3dp"
             android:padding="12dp"
             android:text="Отправить"
+            android:textColor="@color/colorWhite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/comment" />
 
