--- a/app/src/main/res/layout/fragment_questions_answers.xml
+++ b/app/src/main/res/layout/fragment_questions_answers.xml
@@ -18,8 +18,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
-                >
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -27,45 +26,44 @@
                     android:orientation="horizontal">
 
                     <ImageButton
+                        android:id="@+id/result_prev_question"
                         android:layout_width="30dp"
                         android:layout_height="40dp"
-                        android:contentDescription="@null"
-                        android:id="@+id/result_prev_question"
-                        android:src="@drawable/ic_arrow_back_black_24dp"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
-                        android:layout_gravity="center_vertical" />
+                        android:contentDescription="@null"
+                        android:src="@drawable/ic_arrow_back_black_24dp" />
 
                     <TextView
                         android:id="@+id/result_question_counter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:gravity="center_horizontal"
-                        android:layout_weight="20" />
+                        android:layout_weight="20"
+                        android:gravity="center_horizontal" />
 
                     <ImageButton
+                        android:id="@+id/result_next_question"
                         android:layout_width="30dp"
                         android:layout_height="40dp"
-                        android:contentDescription="@null"
-                        android:id="@+id/result_next_question"
-                        android:src="@drawable/ic_arrow_forward_black_24dp"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
-                        android:layout_gravity="center_vertical" />
+                        android:contentDescription="@null"
+                        android:src="@drawable/ic_arrow_forward_black_24dp" />
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/result_question_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:id="@+id/result_question_card"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="50dp">
+                android:layout_marginTop="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -76,8 +74,8 @@
                         android:id="@+id/result_question_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textStyle="bold"
-                        android:layout_margin="10dp" />
+                        android:layout_margin="10dp"
+                        android:textStyle="bold" />
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
@@ -89,26 +87,26 @@
                             android:id="@+id/result_question_code"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:visibility="gone"
-                            android:padding="5dp" />
+                            android:padding="5dp"
+                            android:visibility="gone" />
                     </HorizontalScrollView>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/result_question_answers"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
-                        android:layout_marginBottom="10dp" />
+                        android:layout_marginTop="10dp" />
 
                     <TextView
                         android:id="@+id/result_question_explanation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
+                        android:padding="5dp"
                         android:textStyle="italic"
                         android:visibility="gone" />
 
@@ -116,6 +114,19 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/notice_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:drawableEnd="@drawable/ic_warning_black_24dp"
+                android:drawableRight="@drawable/ic_warning_black_24dp"
+                android:gravity="center_horizontal"
+                android:lines="2"
+                android:text="Заметили ошибку?\nСообщите нам об этом." />
 
         </LinearLayout>
 
